Enhance Dapr Dev Services with PostgreSQL support and improve component discovery