@@ -1,22 +1,28 @@
 package io.quarkiverse.dapr.devui;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 
 import jakarta.annotation.PostConstruct;
+import jakarta.inject.Inject;
 import jakarta.inject.Singleton;
 
 import org.eclipse.microprofile.config.ConfigProvider;
 
+import io.quarkus.arc.All;
 import io.quarkus.runtime.annotations.JsonRpcDescription;
 
 @Singleton
 public class DaprDashboardRPCService {
 
     public static final String DAPR_DASHBOARD_WORKFLOW_URL = "quarkus.dapr.devservices.dashboard.url";
+
+    private final List<DaprComponent> components;
     private String url;
-    private List<DTOComponent> components = Collections.emptyList();
+
+    @Inject
+    public DaprDashboardRPCService(@All List<DaprComponent> components) {
+        this.components = List.copyOf(components);
+    }
 
     @PostConstruct
     void init() {
@@ -28,29 +34,8 @@ public class DaprDashboardRPCService {
         return url;
     }
 
-    public void setComponents(List<DTOComponent> components) {
-        this.components = components;
-    }
-
-    @JsonRpcDescription("Get the discovered Dapr components")
-    public List<DTOComponent> getComponents() {
+    @JsonRpcDescription("Get the Dapr components discovered in the classpath")
+    public List<DaprComponent> getComponents() {
         return components;
-    }
-
-    public static class DTOComponent {
-        public String name;
-        public String type;
-        public String version;
-        public Map<String, String> metadata;
-
-        public DTOComponent() {
-        }
-
-        public DTOComponent(String name, String type, String version, Map<String, String> metadata) {
-            this.name = name;
-            this.type = type;
-            this.version = version;
-            this.metadata = metadata;
-        }
     }
 }
